--- a/form.html
+++ b/form.html
@@ -20,8 +20,8 @@
 	<div id="contact-section" class="bg-dark p-5 text-light row">
 		<h2 class="text-center">Contact Me!</h2>
 
-		<div class="row mt-5 d-lg-flex bg-secondary col-xl-4 col-md-8 col-12 mx-auto card text-white">
-			<form class="p-3" id="form-col">
+		<div class="row mt-4 d-lg-flex bg-secondary col-xl-4 col-md-8 col-12 mx-auto card text-white">
+			<form class="p-3 row" id="form-col">
 				<div class="form-group">
 					<label for="name" class="mb-">Name</label>
 					<input type="text" class="form-control mb-3" id="name" placeholder="Juan de la Cruz">
@@ -50,9 +50,7 @@
 				</div>
 
 				<!-- Button trigger modal -->
-				<button type="button" class="btn btn-dark offset-4" data-bs-toggle="modal" data-bs-target="#modalDiv">
-				  Send Email
-				</button>
+				<button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modalDiv">Send Email</button>
 			</form>
 
 			<!-- Modal -->
@@ -76,6 +74,15 @@
 		</div>
 
 	</div>
+
+	<div class="bg-dark row">
+		<div class="col-5"></div>
+		<button type="button" class="btn btn-outline-light col-2" onclick="window.location.href='./index.html';">
+	            <h6 class="text-center pt-2">Back to home</h6>
+	    </button>
+    </div>
+
+    <div class="bg-dark">line</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
