Updated web dev images

--- a/index.html
+++ b/index.html
@@ -153,21 +153,21 @@
                     </div>
                     <div class="carousel-inner">
                        <div class="carousel-item active">
-                          <img src="./images/s14.png" class="d-block w-100" alt="...">
+                          <img src="./images/s14.PNG" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block bg-dark opacity-50 card">
                              <h5 class="text-white opacity-100">Web Design 1</h5>
                              
                           </div>
                        </div>
                        <div class="carousel-item">
-                          <img src="./images/s13.png" class="d-block w-100" alt="...">
+                          <img src="./images/s13.PNG" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block bg-dark opacity-50 card">
                              <h5 class="text-white opacity-100">Web Design 2</h5>
                              
                           </div>
                        </div>
                        <div class="carousel-item">
-                          <img src="./images/s12.png" class="d-block w-100" alt="...">
+                          <img src="./images/s12.PNG" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block bg-dark opacity-50 card">
                              <h5 class="text-white opacity-100">Web Design 3</h5>
                           </div>
